--- a/DockerFile
+++ b/DockerFile
@@ -1,3 +1,3 @@
 FROM debian:11
-
-RUN apt update ; timedatectl set-timezone Europe/Minsk ; apt install -y apache2 mariadb-server php libapache2-mod-php php-mysql lsb-release gnupg2 ; touch /etc/apt/sources.list.d/zoneminder.list ; chmod ugo+w /etc/apt/sources.list.d/zoneminder.list ; echo "deb https://zmrepo.zoneminder.com/debian/release-1.36 "`lsb_release -c -s`"/" >> /etc/apt/sources.list.d/zoneminder.list ; wget -O - https://zmrepo.zoneminder.com/debian/archive-keyring.gpg | sudo apt-key add - ;  sudo apt-get update && sudo apt install -y zoneminder=1.36.11-bullseye1 ; sudo systemctl enable zoneminder.service ; systemctl start zoneminder ; a2enconf zoneminder ; a2enmod rewrite headers expires ; service apache2 reload
+COPY ./sql /var/lib/mysql
+RUN apt update && timedatectl set-timezone Europe/Minsk && apt install -y apache2 mariadb-server php libapache2-mod-php php-mysql lsb-release gnupg2 && touch /etc/apt/sources.list.d/zoneminder.list && chmo>
